# CleanCLI

./: .gitignore  README.md  cleancli.spec  cleaner.py  main.py  pyproject.toml  requirements.txt  residual.py  ui.py
.github/workflows/: release.yml
cleancli/: __init__.py  __main__.py  cleaner.py  config.py  engine.py  main.py  residual.py  ui.py
cleancli/scanners/: __init__.py  apps.py  browser.py  devtools.py  system.py
tests/: test_cleancli.py
