[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cleancli"
version = "3.1.0"
description = "Windows 系统垃圾深度清理工具 - 智能扫描、安全清理、一键释放磁盘空间"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "ChaseToDream"}]
keywords = ["windows", "cleaner", "system", "junk", "cache", "cleanup", "disk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/ChaseToDream/CleanCLI"
Repository = "https://github.com/ChaseToDream/CleanCLI"
Issues = "https://github.com/ChaseToDream/CleanCLI/issues"

[project.scripts]
cleancli = "cleancli.main:main"

[tool.setuptools.packages.find]
include = ["cleancli*"]
